<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="@dimen/space_md"
        android:paddingBottom="@dimen/space_xl" />

    <LinearLayout
        android:id="@+id/empty_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingHorizontal="@dimen/space_xxl"
        android:paddingTop="@dimen/space_xxl"
        android:paddingBottom="@dimen/space_xxl"
        android:layout_gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/projects_empty_title"
            android:textAppearance="@style/Plugin.Text.Title"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:text="@string/projects_empty_body"
            android:textAppearance="@style/Plugin.Text.BodyMuted"
            android:gravity="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register_empty"
            style="@style/PluginButton.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xl"
            android:paddingHorizontal="@dimen/space_xl"
            android:text="@string/action_register_project"
            app:icon="@drawable/ic_add"
            app:iconTint="?attr/colorOnPrimary" />
    </LinearLayout>

</FrameLayout>
