<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.Plugin"
    android:background="@color/plugin_surface">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/space_xl"
        android:paddingTop="@dimen/space_xl"
        android:paddingBottom="@dimen/space_lg">

        <View
            android:layout_width="32dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:background="?attr/colorOutlineVariant"
            android:layout_marginBottom="@dimen/space_lg" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Plugin.Text.Title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg"
            android:text="@string/form_label_root_path"
            android:textAppearance="@style/Plugin.Text.Label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/root_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            style="@style/PluginTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/root_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textUri" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/Plugin.SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_label_display_name"
            android:textAppearance="@style/Plugin.Text.Label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PluginTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/Plugin.SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_label_client_name"
            android:textAppearance="@style/Plugin.Text.Label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/client_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PluginTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/client_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/Plugin.SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_label_client_email"
            android:textAppearance="@style/Plugin.Text.Label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/client_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PluginTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/client_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/Plugin.SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_label_client_address"
            android:textAppearance="@style/Plugin.Text.Label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/client_address_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PluginTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/client_address_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress|textMultiLine"
                android:maxLines="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/space_lg"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginEnd="@dimen/space_sm">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_label_rate"
                    android:textAppearance="@style/Plugin.Text.Label" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/rate_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_xs"
                    style="@style/PluginTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/rate_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/space_sm">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_label_currency"
                    android:textAppearance="@style/Plugin.Text.Label" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/currency_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_xs"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/ic_arrow_drop_down"
                    app:endIconTint="?attr/colorOnSurfaceVariant"
                    style="@style/PluginTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/currency_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:focusable="false"
                        android:longClickable="false"
                        android:cursorVisible="false"
                        android:clickable="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/Plugin.SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_label_tax"
            android:textAppearance="@style/Plugin.Text.Label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tax_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PluginTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tax_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/Plugin.SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_label_notes"
            android:textAppearance="@style/Plugin.Text.Label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/notes_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PluginTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/notes_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLines="4" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/plugin_outline_variant" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/plugin_surface"
        android:paddingHorizontal="@dimen/space_xl"
        android:paddingVertical="@dimen/space_md">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            style="@style/PluginButton.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/PluginButton.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:text="@string/action_cancel" />

    </LinearLayout>

</LinearLayout>
